Add 3dsMax Configs

--- a/.gitignore
+++ b/.gitignore
@@ -146,6 +146,8 @@ artstation
 textureimporter/settings.ini
 textureimporter/configs/*.json
 !textureimporter/configs/Arnold.json
+!textureimporter/configs/Arnold (3dsMax).json
 !textureimporter/configs/PBR Metallic Roughness.json
 !textureimporter/configs/VRay (Specular Glossiness).json
 !textureimporter/configs/VRay (Metalness Roughness).json
+!textureimporter/configs/VRay (3dsMax).json
